#Rnj 107 added to render

--- a/angular.json
+++ b/angular.json
@@ -84,6 +84,11 @@
               "browserTarget": "RanjitWeb:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy.conf.json",
+            "port": 4200,  
+            "host": "0.0.0.0"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
