--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,8 @@
           },
           "options": {
             "proxyConfig": "proxy.conf.json",
-            "host": "0.0.0.0"
+            "host": "0.0.0.0",
+            "port": 4200 
           },
           "defaultConfiguration": "development"
         },
