--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-     "start": "echo $PORT && ng serve --host 0.0.0.0 --port $PORT --disable-host-check",
+     "start": "ng serve --host 0.0.0.0 --port 443",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
