--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,10 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "aot": true,
+              "optimization": true,
+              "buildOptimizer": true
             },
             "development": {
               "buildOptimizer": false,
